fix(vercel): Add vercel-build script to package.json
Vercel 배포에서 'Error: The script "vercel-build" is not defined in your package.json' 에러가 발생하는 문제를 해결합니다.

Vercel이 vercel.json의 buildCommand 대신 package.json의 vercel-build 스크립트를 우선적으로 실행하려고 시도하는 것으로 보입니다.

- package.json의 scripts에 vercel-build 항목을 추가하고, 이 스크립트가 build.sh를 실행하도록 설정합니다.
- 이 변경으로 Vercel 배포가 올바른 빌드 스크립트를 사용하도록 강제합니다.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**DevSecOps, DevOps, FinOps 전문 기술 블로그**",
   "main": "sw.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "./build.sh"
   },
   "keywords": [],
   "author": "",
