--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -6,6 +6,8 @@ lxml>=4.9.0
 tweepy>=4.14.0
 PyYAML>=6.0
 Pillow>=9.0.0
+python-dotenv>=0.21.0
+
 
 # Google OAuth 2.0 및 Gemini API (선택적)
 google-auth>=2.23.0
