--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,11 +14,59 @@ on:
   workflow_dispatch: # 수동 실행 가능
 
 jobs:
+  check-changes:
+    runs-on: ubuntu-latest
+    timeout-minutes: 2
+    permissions:
+      contents: read
+    outputs:
+      should-build: ${{ steps.set-output.outputs.should-build }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      
+      - name: Check changed files
+        id: filter
+        if: github.event_name == 'push' || github.event_name == 'pull_request'
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            should-build:
+              - '**_posts/**'
+              - '**_includes/**'
+              - '**_layouts/**'
+              - '**assets/**'
+              - '**_config.yml'
+              - '**vercel.json'
+              - '**.github/workflows/**'
+      
+      - name: Set output
+        id: set-output
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "should-build=true" >> $GITHUB_OUTPUT
+          elif [ -n "${{ steps.filter.outputs.should-build }}" ]; then
+            echo "should-build=${{ steps.filter.outputs.should-build }}" >> $GITHUB_OUTPUT
+          else
+            echo "should-build=true" >> $GITHUB_OUTPUT
+          fi
+      
+      - name: Output decision
+        run: |
+          echo "Should build: ${{ steps.set-output.outputs.should-build }}"
+
   build:
     runs-on: ubuntu-latest
     # 타임아웃 설정 (무한 실행 방지)
     timeout-minutes: 10
-    
+    # CI 최적화: 관련 파일 변경 시에만 빌드 (workflow_dispatch는 항상 실행)
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && (needs.check-changes.outputs.should-build == 'true' || needs.check-changes.outputs.should-build == ''))
+    needs: [check-changes]
     permissions:
       contents: read
       pages: write
@@ -52,11 +100,15 @@ jobs:
           echo "Jekyll version: $(bundle exec jekyll -v)"
           echo ""
           echo "📦 Installing dependencies..."
-          bundle install
+          bundle install || (echo "❌ Bundle install failed" && exit 1)
           echo ""
           echo "🏗️  Building site..."
-          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --verbose --trace
-          echo "✅ Build completed successfully"
+          if bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --verbose --trace; then
+            echo "✅ Build completed successfully"
+          else
+            echo "❌ Build failed"
+            exit 1
+          fi
         env:
           JEKYLL_ENV: production
           LANG: en_US.UTF-8
@@ -73,7 +125,11 @@ jobs:
 
   deploy:
     # PR에서는 배포하지 않음 (비용 절감)
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # CI 최적화: 관련 파일 변경 시에만 배포
+    if: |
+      github.event_name == 'push' && 
+      github.ref == 'refs/heads/main' &&
+      (needs.check-changes.outputs.should-build == 'true' || needs.check-changes.outputs.should-build == '')
     
     # 동시 배포 방지: 같은 브랜치의 배포는 큐에 대기
     concurrency:
@@ -87,7 +143,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: [check-changes, build]
     permissions:
       pages: write
       id-token: write
@@ -105,3 +161,10 @@ jobs:
           echo "✅ Deployed to GitHub Pages"
           echo "URL: ${{ steps.deployment.outputs.page_url }}"
           echo "Commit: ${{ github.sha }}"
+      
+      - name: Deployment Error
+        if: failure()
+        run: |
+          echo "❌ Deployment failed"
+          echo "Please check the logs above for details"
+          exit 1
