fix: GitHub Actions pip 캐시 오류 해결
- setup-python 액션에 cache-dependency-path 추가
- jekyll.yml, generate-images.yml, ai-video-gen.yml 수정
- pip 캐시 폴더 경로 명시로 캐시 오류 해결

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -103,11 +103,12 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+          cache-dependency-path: scripts/requirements.txt
 
       - name: Install Python dependencies
         run: |
           echo "📦 Installing Python dependencies..."
-          pip install --quiet --no-cache-dir Pillow || echo "⚠️ Pillow installation failed, continuing..."
+          pip install --quiet Pillow || echo "⚠️ Pillow installation failed, continuing..."
           echo "✅ Python dependencies installed"
 
       - name: Validate Jekyll Configuration
