fix: _sass 파일 변경 감지 추가로 빌드 트리거 개선

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -37,6 +37,7 @@ jobs:
               - '**_posts/**'
               - '**_includes/**'
               - '**_layouts/**'
+              - '**_sass/**'
               - '**assets/**'
               - '**_config.yml'
               - '**vercel.json'
