feat: 매일 기술 뉴스 자동 수집 시스템 구축
- 15개 이상 뉴스 소스 RSS 피드 수집 (GeekNews, AWS, GCP, MS Security, CISA, Datadog Security Labs 등)
- AI 기반 요약 생성 지원 (Gemini API)
- GitHub Actions 일일 자동 실행 (매일 오전 9시 KST)
- 초안 자동 PR 생성 및 수동 검토 후 게시 워크플로우

--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -8,6 +8,8 @@ PyYAML>=6.0
 Pillow>=9.0.0
 python-dotenv>=0.21.0
 
+# RSS 피드 파싱 (뉴스 수집)
+feedparser>=6.0.0
 
 # Google OAuth 2.0 및 Gemini API (선택적)
 google-auth>=2.23.0
