fix: trailingSlash 비활성화 (CSS MIME type 문제 해결 시도)

--- a/vercel.json
+++ b/vercel.json
@@ -142,7 +142,7 @@
       ]
     }
   ],
-  "trailingSlash": true,
+  "trailingSlash": false,
   "cleanUrls": true,
   "functions": {
     "api/chat.js": {
