fix: Vercel 빌드 에러 수정
- vercel.json: --break-system-packages 플래그 추가 (Python externally-managed-environment 에러 해결)
- certifications.html: Liquid 문법 오류 수정 (파이프를 조건문 외부로 이동)

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "framework": null,
   "buildCommand": "chmod +x build.sh && ./build.sh",
   "outputDirectory": "_site",
-  "installCommand": "(python3 -m pip install --quiet --no-cache-dir Pillow || pip3 install --quiet --no-cache-dir Pillow || true) && npm ci || npm install && bundle install --jobs 4 --retry 3",
+  "installCommand": "(python3 -m pip install --quiet --no-cache-dir --break-system-packages Pillow || pip3 install --quiet --no-cache-dir --break-system-packages Pillow || true) && npm ci || npm install && bundle install --jobs 4 --retry 3",
   "build": {
     "env": {
       "LANG": "C.UTF-8",
