--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": null,
   "buildCommand": "chmod +x build.sh && ./build.sh",
   "outputDirectory": "_site",
+  "crons": [],
   "installCommand": "(python3 -m pip install --quiet --no-cache-dir --break-system-packages Pillow || pip3 install --quiet --no-cache-dir --break-system-packages Pillow || true) && npm ci || npm install && bundle install --jobs 4 --retry 3",
   "build": {
     "env": {
