fix: Vercel 설정 최적화 및 deprecation 경고 해결
- package.json: ESM 모듈 선언 (type: module) 추가
- vercel.json: deprecated memory 설정 제거
- main.scss: Jekyll 호환성 유지 (@import 사용, 주석 추가)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "**DevSecOps, DevOps, FinOps 전문 기술 블로그**",
   "main": "sw.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "vercel-build": "./build.sh"
