feat: Sentry/Cloudflare 무료 기능 최대 활용 설정
Sentry Free Tier 최적화:
- Session Replay 활성화 (에러 시 10%, 월 50 replays 무료)
- 기존 에러 필터링/샘플링 유지

Cloudflare Free Tier 통합 준비:
- Web Analytics 스크립트 추가 (토큰 설정 시 활성화)
- _config.yml에 cloudflare_analytics_token 옵션 추가

문서화:
- docs/setup/FREE_TIER_OPTIMIZATION.md 추가
- Sentry/Cloudflare 무료 기능 목록 및 활성화 가이드

--- a/_config.yml
+++ b/_config.yml
@@ -185,8 +185,11 @@ twitter:
 # google_analytics: "G-XXXXXXXXXX"
 
 # Google AdSense - Publisher ID (ca-pub-XXXXXXXXXX)
-# AdSense 계정에서 발급받은 Publisher ID를 입력하세요
 google_adsense: "ca-pub-6788271437088974"
+
+# Cloudflare Web Analytics (무료, 프라이버시 친화적)
+# 토큰 발급: Cloudflare Dashboard → Analytics & Logs → Web Analytics → Add a site
+# cloudflare_analytics_token: "YOUR_CLOUDFLARE_BEACON_TOKEN"
 
 # Open Graph & Social Sharing
 # 기본 이미지는 SVG로 생성되며, PNG로 변환하려면 scripts/generate_og_image.py 실행
