feat: Buttondown 이메일 템플릿 개선 및 2026-01-25 보안 포스팅 추가
- Buttondown 이메일 형식을 더 깔끔하고 현대적으로 개선
- Subject: 불필요한 타임스탬프 제거, 날짜와 제목만 표시
- Body: 구조 단순화, 구독/방문 링크 하단에 통합
- .env 파일에서 따옴표 자동 제거 처리
- collect_tech_news.py, generate_news_draft.py 타입 에러 수정
- 2026-01-25 Tech & Security Weekly Digest 포스팅 추가 (VMware vCenter KEV, Fortinet SSO, Sandworm)

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -3,7 +3,14 @@ name: Daily Tech News Auto Publish
 on:
   schedule:
     # 매일 오전 10시 KST = UTC 01:00
+    # GitHub Actions cron은 큐 지연이 있을 수 있음 (최대 15-30분)
     - cron: '0 1 * * *'
+  
+  # 저장소 푸시 시에도 트리거 (선택적으로 활성화)
+  # push:
+  #   branches: [main]
+  #   paths:
+  #     - '.github/workflows/daily-news.yml'
   
   workflow_dispatch:
     inputs:
