docs: OpenCode 설정 개선 및 Ralph Loop 커맨드 문서화
- AGENTS.md: 모델 선택 전략 추가 (Opus 4.5/Sonnet 4 비용 최적화)
- AGENTS.md: 새 커맨드 추가 (/security-audit, /write-code, /refactor, /fix-bugs, /cost-optimize)
- opencode.json: MCP 통합 설정 추가 (Playwright, GitHub, Notion 등)
- .opencode/commands/: collect-news, generate-images, validate-posts 문서 추가
- .cursorrules: AI 가이드라인 업데이트
- .gitignore: 추가 패턴

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,16 @@ secrets/
 gemini-service-key.json
 *-service-key.json
 
+# Google OAuth credentials (MCP servers)
+gcp-oauth.keys.json
+google-oauth*.json
+client_secret_*.json
+*.credentials.json
+
+# OAuth token storage
+*.token.json
+oauth-tokens/
+
 # Node
 node_modules/
 
