feat: add Upstash Redis rate limiting and free tier optimization
- Add api/lib/ratelimit.js with Redis + In-Memory fallback support
- Update api/chat.js to use new rate limiting library
- Add docs/FREE_TIER_OPTIMIZATION.md comprehensive guide
- Update .env.example with Upstash Redis and Prisma Postgres config

Features:
- Sliding window rate limiting algorithm
- Pipeline support for Redis command optimization
- Configurable rate limits per tier (anonymous/authenticated)
- Fail-open strategy for graceful degradation

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,56 @@ USE_GEMINI_FOR_IMPROVEMENT=true
 
 # Enable caching (default: true)
 ENABLE_CACHING=true
+
+# ============================================
+# Upstash Redis (Rate Limiting & Caching)
+# ============================================
+# Free Tier: 500K commands/month, 256MB storage
+# Get credentials from: https://console.upstash.com/
+# 
+# Security Best Practices:
+# - Use REST API (HTTPS) for serverless environments
+# - Enable TLS encryption (default on Upstash)
+# - Rotate tokens periodically
+
+# Upstash Redis REST API URL
+# Format: https://<region>.upstash.io
+UPSTASH_REDIS_REST_URL=https://your-region.upstash.io
+
+# Upstash Redis REST API Token
+# Keep this secret! Never expose in client-side code
+UPSTASH_REDIS_REST_TOKEN=AXxxxxxxxxxxx
+
+# ============================================
+# Prisma Postgres (via Prisma Accelerate)
+# ============================================
+# Free Tier: 512MB storage, 100K queries/month
+# Connection pooling included with Accelerate
+# 
+# Setup:
+# 1. Create database at https://console.prisma.io/
+# 2. Enable Accelerate for connection pooling
+# 3. Use prisma:// URL for pooled connections
+
+# Prisma Accelerate Connection URL (for pooled connections)
+# Format: prisma://accelerate.prisma-data.net/?api_key=xxx
+DATABASE_URL=prisma://accelerate.prisma-data.net/?api_key=your_api_key
+
+# Direct Database URL (for migrations only, not for production queries)
+# Format: postgres://user:password@host/database
+DIRECT_URL=postgres://user:password@your-host.neon.tech/your-database
+
+# ============================================
+# Cost Optimization Settings
+# ============================================
+
+# Enable Upstash Redis for rate limiting (recommended for production)
+# If false, uses in-memory rate limiting (not recommended for multi-instance)
+USE_UPSTASH_RATELIMIT=true
+
+# Rate limiting configuration
+# Anonymous users: requests per minute
+RATELIMIT_ANONYMOUS_RPM=10
+
+# Authenticated users: requests per minute
+RATELIMIT_AUTHENTICATED_RPM=30
