security: mask personal info and replace hardcoded paths
- Remove email addresses from documentation paths
- Replace hardcoded /Users/yong paths with ~/Desktop/tech-blog
- Use environment variables in setup_tmux_sessions.sh
- Add note explaining AdSense ID is public by design

Files updated:
- docs/scripts/*.md - Generic paths
- docs/troubleshooting/MISSING_IMAGES_ISSUE.md - Remove email
- scripts/setup_tmux_sessions.sh - Use env vars for paths
- _config.yml - Add clarifying comment for AdSense ID

--- a/_config.yml
+++ b/_config.yml
@@ -186,7 +186,8 @@ twitter:
 # Google Analytics - GA4 Measurement ID (G-XXXXXXXXXX) or Universal Analytics (UA-XXXXXXXXX-X)
 # google_analytics: "G-XXXXXXXXXX"
 
-# Google AdSense - Publisher ID (ca-pub-XXXXXXXXXX)
+# Google AdSense - Publisher ID (public by design, visible in page source)
+# Note: AdSense IDs are meant to be public and are embedded in ad code
 google_adsense: "ca-pub-6788271437088974"
 
 # Cloudflare Web Analytics (무료, 프라이버시 친화적)
