fix: improve daily news auto-publish reliability
- auto_publish_news.py: add progressive time relaxation when
  24h filter yields too few items (expands to data_age, 48h, 72h,
  then uses all items sorted by date)
- collect_tech_news.py: add per-feed socket timeout (--feed-timeout)
  to prevent single slow feed from blocking entire collection
- daily-news.yml: increase RSS collection timeout 5m → 8m,
  use --feed-timeout 15 for faster per-feed failure

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -72,8 +72,8 @@ jobs:
           HOURS="${{ github.event.inputs.hours || '24' }}"
           echo "Collecting news from last $HOURS hours..."
 
-          # RSS 수집 실행 (타임아웃 5분)
-          timeout 300 python3 scripts/collect_tech_news.py --hours $HOURS --output _data/collected_news.json || {
+          # RSS 수집 실행 (타임아웃 8분, 개별 피드 타임아웃 15초)
+          timeout 480 python3 scripts/collect_tech_news.py --hours $HOURS --output _data/collected_news.json --feed-timeout 15 || {
             echo "::warning::RSS collection timed out or failed, checking existing data..."
           }
 
