fix: rename duplicate-URL posts, fix broken links, improve SEO templates
- Rename 01/28-01/30 digest posts with topic slugs for unique URLs
- Fix 7 broken URLs across 5 posts (OWASP, NIST, RedHat, Infomaniak, Tigera, Ollama)
- Add concurrency group to daily-news workflow to prevent push race conditions
- Improve auto_publish_news.py: SEO-rich titles, dynamic tags, better templates
- Update corresponding SVG image filenames and front matter paths

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -35,6 +35,10 @@ on:
         required: false
         default: '10'
 
+concurrency:
+  group: daily-news-publish
+  cancel-in-progress: false
+
 env:
   PYTHON_VERSION: '3.11'
 
