feat: hybrid search system with Prisma Postgres FTS, Redis caching, and Fuse.js

--- a/.env.example
+++ b/.env.example
@@ -122,6 +122,18 @@ DATABASE_URL=prisma://accelerate.prisma-data.net/?api_key=your_api_key
 DIRECT_URL=postgres://user:password@your-host.neon.tech/your-database
 
 # ============================================
+# Search API Settings
+# ============================================
+# Full-text search uses Prisma Postgres + Redis caching
+# Search endpoint: /api/search?q=query
+
+# Search rate limit (requests per minute)
+SEARCH_RATE_LIMIT_RPM=30
+
+# Search cache TTL in seconds (default: 3600 = 1 hour)
+SEARCH_CACHE_TTL=3600
+
+# ============================================
 # Cost Optimization Settings
 # ============================================
 
