--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "./build.sh"
+    "vercel-build": "./build.sh",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "index-posts": "node scripts/index_posts.mjs",
+    "index-posts:dry": "node scripts/index_posts.mjs --dry-run",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "terser": "^5.46.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "@upstash/redis": "^1.36.1",
+    "@vercel/blob": "^0.27.3",
+    "fuse.js": "^7.1.0",
+    "gray-matter": "^4.0.3",
+    "prisma": "^5.22.0"
   }
 }
