fix: 보안 취약점 수정 및 CI/CD 워크플로우 개선
보안:
- undici 취약점 해결: 미사용 @vercel/blob 의존성 제거
- fast-xml-parser DoS 취약점 해결: video-generator에 npm overrides 추가

CI/CD:
- dorny/paths-filter v2→v3, configure-pages v4→v5, upload-pages-artifact v3→v4
- 5개 워크플로우에 concurrency 그룹 추가 (중복 실행 방지, 비용 절감)

--- a/.github/workflows/generate-images.yml
+++ b/.github/workflows/generate-images.yml
@@ -32,6 +32,10 @@ on:
     paths:
       - '_posts/**'
 
+concurrency:
+  group: generate-images-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   generate-images:
     runs-on: ubuntu-latest
