--- a/.github/workflows/buttondown-notify.yml
+++ b/.github/workflows/buttondown-notify.yml
@@ -10,6 +10,10 @@ on:
     paths:
       - '_posts/**' # 포스트 변경 시에만 실행
 
+concurrency:
+  group: buttondown-notify-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   notify:
     runs-on: ubuntu-latest
