--- a/video-generator/package.json
+++ b/video-generator/package.json
@@ -21,5 +21,8 @@
     "@types/web": "^0.0.100",
     "typescript": "^5.1.6"
   },
-  "packageManager": "npm@9.0.0"
+  "packageManager": "npm@9.0.0",
+  "overrides": {
+    "fast-xml-parser": ">=5.3.4"
+  }
 }
