feat: 데일리 포스팅 URL 개선 + 고퀄리티 포스트 재작성
- permalink: /posts/:year/:month/:day/:title/ (일자 포함)
- 2/2 포스트 재작성: Notepad++ 공급망 공격, Bitcoin $80K 붕괴,
  AI Agent 스케일링, Amazon Bedrock AgentCore, FOSDEM 2026
- 중복 포스트 삭제 (AI_Ransomware, AI_Ransomware_Security)
- collect_tech_news.py: 날짜 없는 아카이브 항목 스킵,
  최근 포스트 중복 제거 로직 추가

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ sitemap:
   include_categories: true
 
 # Permalinks - Clean URL structure
-permalink: /posts/:year/:month/:title/
+permalink: /posts/:year/:month/:day/:title/
 
 # Collections for categories
 collections:
